--- a/templates/nrpe.cfg.erb
+++ b/templates/nrpe.cfg.erb
@@ -2,9 +2,10 @@
 <%-
 @settings.keys.sort.each do |k|
     case @settings[k].class.to_s
-    when 'TrueClass','FalseClass' then v = @settings[k] ? '1' : '0'
     when 'Array' then v = @settings[k].join(',')
-    else v = @settings[k]
+    when 'Fixnum' then v = @settings[k]
+    when 'TrueClass','FalseClass' then v = @settings[k] ? '1' : '0'
+    else v = scope.function_shellquote([@settings[k]])
     end
 -%>
 <%= k %>=<%= v %>
